--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vite + React</title>
 		<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
+		<script type="module" src="/src/main.jsx"></script>
 	</head>
 	<body>
-		<div id="root"></div>
-		<script type="module" src="/src/main.jsx"></script>
-		<noscript></noscript>
-		<div id="root"></div>
+		<div id="root" class="flex min-h-svh w-full flex-col"></div>
 	</body>
 </html>
