--- a/index.html
+++ b/index.html
@@ -2,13 +2,52 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="/mySkulLogo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + React</title>
-		<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
+
+		<link
+			rel="preload"
+			href="/https://cdn.jsdelivr.net/fontsource/fonts/montserrat:vf@latest/latin-wght-normal.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>
+
+		<style type="text/css">
+			@font-face {
+				font-family: "Montserrat";
+				font-style: normal;
+				font-display: swap;
+				font-weight: 100 900;
+				src: url(https://cdn.jsdelivr.net/fontsource/fonts/montserrat:vf@latest/latin-wght-normal.woff2)
+					format("woff2-variations");
+				unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
+					U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
+					U+FFFD;
+			}
+
+			@font-face {
+				font-family: "Inter";
+				font-style: normal;
+				font-display: swap;
+				font-weight: 100 900;
+				src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2)
+					format("woff2-variations");
+				unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
+					U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
+					U+FFFD;
+			}
+		</style>
 		<script type="module" src="/src/main.jsx"></script>
+
+		<title>School App</title>
 	</head>
-	<body>
-		<div id="root" class="flex min-h-svh w-full flex-col"></div>
-	</body>
+	<body></body>
 </html>
