--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<link
 			rel="preload"
-			href="/https://cdn.jsdelivr.net/fontsource/fonts/montserrat:vf@latest/latin-wght-normal.woff2"
+			href="https://cdn.jsdelivr.net/fontsource/fonts/montserrat:vf@latest/latin-wght-normal.woff2"
 			as="font"
 			type="font/woff2"
 			crossorigin
 		/>
 		<link
 			rel="preload"
-			href="/https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2"
+			href="https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2"
 			as="font"
 			type="font/woff2"
 			crossorigin
@@ -45,9 +45,11 @@
 					U+FFFD;
 			}
 		</style>
-		<script type="module" src="/src/main.jsx"></script>
+		<script type="module" src="/src/main.tsx"></script>
 
 		<title>School App</title>
 	</head>
-	<body></body>
+	<body>
+		<div id="root" class="h-full"></div>
+	</body>
 </html>
