--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
 		<title>School App</title>
 	</head>
 	<body>
-		<div id="root" class="h-full"></div>
+		<div id="root" class="flex min-h-svh flex-col"></div>
 	</body>
 </html>
