--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
 		<link
 			rel="preload"
 			href="https://cdn.jsdelivr.net/fontsource/fonts/montserrat:vf@latest/latin-wght-normal.woff2"
@@ -46,11 +47,35 @@
 			}
 		</style>
 
+		<link rel="stylesheet" href="/tailwind.css" />
+
+		<script type="module" src="/src/preloader.ts"></script>
 		<script type="module" src="/src/main.tsx"></script>
 
 		<title>School App</title>
 	</head>
 	<body>
 		<div id="root" class="flex min-h-svh flex-col"></div>
+
+		<aside
+			id="preloader"
+			class="fixed inset-0 flex items-center justify-center [transition:opacity_1500ms_linear]"
+		>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				width="32"
+				height="32"
+				viewBox="0 0 24 24"
+				class="text-school-blue size-[50px] animate-spin"
+			>
+				<path
+					fill="none"
+					stroke="currentColor"
+					stroke-linecap="round"
+					stroke-width="2"
+					d="M8.124 5a8 8 0 1 0 7.752 0M12 4h.05"
+				/>
+			</svg>
+		</aside>
 	</body>
 </html>
