--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		/>
 		<link
 			rel="preload"
-			href="https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2"
+			href="https://cdn.jsdelivr.net/fontsource/fonts/outfit:vf@latest/latin-wght-normal.woff2"
 			as="font"
 			type="font/woff2"
 			crossorigin
@@ -35,11 +35,11 @@
 			}
 
 			@font-face {
-				font-family: "Inter";
+				font-family: "Outfit";
 				font-style: normal;
 				font-display: swap;
 				font-weight: 100 900;
-				src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2)
+				src: url(https://cdn.jsdelivr.net/fontsource/fonts/outfit:vf@latest/latin-wght-normal.woff2)
 					format("woff2-variations");
 				unicode-range:
 					U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308,
@@ -66,7 +66,7 @@
 				width="32"
 				height="32"
 				viewBox="0 0 24 24"
-				class="text-school-blue size-[50px] animate-spin"
+				class="text-school-blue mb-7 size-[40px] animate-spin"
 			>
 				<path
 					fill="none"
