--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<title>School App</title>
 	</head>
 	<body>
-		<div id="root" class="flex min-h-svh flex-col"></div>
+		<div id="root"></div>
 
 		<aside
 			id="preloader"
